-
Bug
-
Resolution: Done
-
P2: Important
-
5.9, 5.10
-
None
-
Linux Mint 18.1
I have run into crashes because of dangling pointers when I used the same QWebEngineUrlRequestInterceptor for multiple pages and made one of them the parent of the interceptor: when I closed the parent page, the interceptor gets deleted and then the next navigation of the other one crashes.
This is probably the same issue that causes QTBUG-59876 and I have run into another crash when closing a page that has a QWebEngineUrlRequestInterceptor - after visiting youtube.com in --single-process mode as in QTBUG-60225. See the attached example.
Maybe we should turn BrowserContextAdapter::m_requestInterceptor into a QSharedPointer?
For Gerrit Dashboard: QTBUG-60236 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
193810,2 | Fix crash on exit with url-request interceptors | 5.9.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |