Fix crash on exit with url-request interceptors

If the interceptor is the child of the profile, they will be deleted
with the API profile which is before the underlying browser-context,
they should therefore be unset from the browser context first.

Task-number: QTBUG-60236
Change-Id: I2954e8106863b8b421ef166f6bf8fa79240c95ee
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>